<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/favorite_fill1_wght400_grad0_opsz24"
        android:title="@string/favourite"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/baseline_schedule_24"
        android:title="@string/schedule"/>
</menu>